# Atv-Integrada-Hotelaria

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
hotelaria/: admin.py  apps.py
hotelaria/migrations/: 0001_initial.py  0002_serviço.py  0003_pagamento_alter_serviço_idservico.py  0004_quarto_alter_serviço_idservico.py  0005_funcionario_reserva_alter_serviço_idservico_and_more.py
hotelaria/models/: __init__.py  funcionario.py  hospede.py  pagamento.py  quarto.py  reserva.py  reserva_servico.py  serviço.py
hotelaria/serializers/: __init__.py  funcionario.py  hospede.py  pagamento.py  quarto.py  reserva.py  reserva_servico.py  serviço.py
hotelaria/views/: __init__.py  funcionario.py  hospede.py  pagamento.py  quarto.py  reserva.py  reserva_servico.py  serviço.py
